# Movie-Market-Analytics

./: .gitignore
movie-market-analytics/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
movie-market-analytics/data/sample/: sample_movies.csv
movie-market-analytics/docs/: API.md  DATA_DICTIONARY.md  ERD.md
movie-market-analytics/scripts/: run_sql_files.py
movie-market-analytics/sql/analysis/: country_analysis.sql  genre_analysis.sql  popularity_analysis.sql  rating_analysis.sql  year_analysis.sql
movie-market-analytics/sql/ddl/: 01_create_database.sql  02_create_tables.sql  03_create_indexes.sql
movie-market-analytics/src/analysis/: analyze_movies_pandas.py  analyze_movies_sql.py
movie-market-analytics/src/api/: app.py
movie-market-analytics/src/api/routes/: genres.py  movies.py  stats.py
movie-market-analytics/src/api/utils/: response.py
movie-market-analytics/src/collectors/: douban_collector.py  mock_collector.py
movie-market-analytics/src/config/: settings.py
movie-market-analytics/src/db/: mysql_helper.py
movie-market-analytics/src/ml/: features.py  model.py  predict.py  train.py
movie-market-analytics/src/pipelines/: extract.py  load.py  run_pipeline.py  transform.py
movie-market-analytics/src/scripts/: check_data_quality.py  import_movies_from_csv.py
movie-market-analytics/src/utils/: logger.py
movie-market-analytics/src/visualization/: generate_report.py  plot_movies.py
movie-market-analytics/tests/: test_api.py  test_mysql_helper.py  test_transform.py
